# Shamusic

./: .gitignore  Readme.md  manage.py  pyproject.toml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
core/: admin.py  filters.py  models.py  paginator.py  serializers.py  urls.py  validators.py  views.py
core/api/: serializers.py
core/api/viewsets/: __init__.py  album_views.py  band_views.py  musician_views.py  track_views.py
core/migrations/: 0001_initial.py  0002_alter_album_cover_alter_band_cover_and_more.py
rest-client/: album.http  band.http  musician.http  track.http
shamusic/: asgi.py  settings.py  urls.py  wsgi.py
